tests/semantic/fact_cat/fact_cat.err
Error: Binary function in fact in file fact_cat.dl at line 6
F(cat("x","y"),"AA").
--^-------------------
1 errors generated, evaluation aborted
